--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^4.3.0",
     "helmet": "^4.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
