--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "csc642-team05-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "http://jackofalltraits.github.io/csc642-summer2020-team5-team-project",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
+    "gh-pages": "^3.1.0",
     "helmet": "^4.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
@@ -17,10 +18,13 @@
     "react-helmet": "^6.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "save-dev": "0.0.1-security"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
