--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    
     "test": "react-scripts test",
+    "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
   "browserslist": {
